--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.359.0",
     "next": "14.1.3",
+    "next-share": "^0.27.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-share-kit": "^1.1.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
